--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ author:
   email: qiankun.li@qq.com
   link: 
   weibo: 
-  github: http://qiankunli.github.io
+  github: http://bobeemer.github.io
 
 # 站点信息
 title: 李乾坤的博客 
 description: 李乾坤的博客
-url: http://qiankunli.github.io
+url: http://bobeemer.github.io
 rss_url: 
 
 # gavatar头像及Favicon
