--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@ markdown: kramdown
 
 # 作者信息
 author: 
-  name: 李乾坤
-  email: qiankun.li@qq.com
+  name: 游福财
+  email: tzjdrqs@gmail.com
   link: 
   weibo: 
   github: http://bobeemer.github.io
 
 # 站点信息
-title: 李乾坤的博客 
-description: 李乾坤的博客
+title: 游福财的博客 
+description: 游福财的博客
 url: http://bobeemer.github.io
 rss_url: 
 
@@ -29,7 +29,7 @@ ga:
 
 # disqus 设置
 disqus:
-  shortname: qiankunli
+  shortname: youfucai
 
 # gitment
 gitment:
@@ -45,8 +45,8 @@ cates:
 
 # 中文本地化
 locals:
-  tags: 标签
-  about: 关于
-  newest: 最新文章
+  tags: 标签前
+  about: 关于鱼鱼
+  newest: 最新文章呀
 plugins:
 - jekyll-paginate
